--- a/task2/index.html
+++ b/task2/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex nam ad repudiandae. Aliquid est voluptatum doloremque magni sit consequatur possimus rem provident dolorum molestias? Fugiat vero itaque eos fugit eligendi?
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati mollitia blanditiis consequatur totam cum, voluptate ullam debitis quae laudantium minima, consequuntur nobis fuga dolor, pariatur omnis labore ipsa! Nam, officiis.</p>
 </body>
 </html>
