--- a/task1/index.html
+++ b/task1/index.html
@@ -3,13 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Task1</title>
 </head>
 <body>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur ullam dicta officia nihil qui explicabo error magnam itaque sit pariatur, laboriosam tempora quia placeat repudiandae voluptas vitae voluptates, dolorem necessitatibus!</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur ullam dicta officia nihil qui explicabo error magnam itaque sit pariatur, laboriosam tempora quia placeat repudiandae voluptas vitae voluptates, dolorem necessitatibus!</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur ullam dicta officia nihil qui explicabo error magnam itaque sit pariatur, laboriosam tempora quia placeat repudiandae voluptas vitae voluptates, dolorem necessitatibus!</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur ullam dicta officia nihil qui explicabo error magnam itaque sit pariatur, laboriosam tempora quia placeat repudiandae voluptas vitae voluptates, dolorem necessitatibus!</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur ullam dicta officia nihil qui explicabo error magnam itaque sit pariatur, laboriosam tempora quia placeat repudiandae voluptas vitae voluptates, dolorem necessitatibus!</p>
+    <center>
+        <h1>Welcome to T4TEQ</h1>
+    </center>
+    <h2><u>ABOUT US</u></h2>
+    <p>
+        <b>T4TEQ Software Solutions</b> is a software development and training company located in Trichirapalli, Tamil Nadu, India. It was started in the year of 2017 and incorporated under the Ministry of Corporate Affairs, Govt. of India as a corporate training and development company in 2019. It is internationally accredited as an ISO 9001:2015 certified training company by Sustem and Product Certification, UK.
+    </p>
+    <p>
+        <b> T4TEQ Software Solutions</b> was started with the aim to train, develop and to give career guidance to students. It raises prominent, well-resourced employes to IT and ITES Industries. It offers end to end training programes in programming, softskills and interview training along with various collabrative software projects and real time scenarios for corporates and educational institutions.
+    </p>
+    <p>
+        T4TEQ Software Solutions was provides unique and friendly training with the latest technology required in IT Industries and 24/7 support, so that students can get knowledge and support anytime. It has experienced Subject Matter Experts (SME) in each domain and placed many students from varios college. It conducts many value added course,wokshops and guest lectures in all the trending and topics sporadically.
+    </p>
+    <p style="padding-left: 400px;">
+        <b>Vision:</b>
+    </p>
+    <p style="padding-left: 500px;">
+        <em>complete package for IT,</em>
+    </p>
+    <p style="padding-left: 400px;">
+        <b>Mission</b>
+    </p>
+    <p style="padding-left: 500px;">
+        <em>Serve knowledge for developers....</em>
+    </p>
+    <p>
+        <u>Sample:</u><br>Chemical Formula: <br>H<sub>2</sub>+O<sub>3</sub>=H<sub>2</sub>O<sub>3</sub><br>(a+b)<sup>2</sup>=a <sup>2</sup>+2ab+b <sup>2</sup><br>Combination==>nC<sub>r</sub>=n!(n-r)!/r! <br><br> <strike><b>Don't use Mobile phone</b></strike>
+    </p>
 </body>
 </html>
