--- a/task1/index.html
+++ b/task1/index.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur ullam dicta officia nihil qui explicabo error magnam itaque sit pariatur, laboriosam tempora quia placeat repudiandae voluptas vitae voluptates, dolorem necessitatibus!</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur ullam dicta officia nihil qui explicabo error magnam itaque sit pariatur, laboriosam tempora quia placeat repudiandae voluptas vitae voluptates, dolorem necessitatibus!</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur ullam dicta officia nihil qui explicabo error magnam itaque sit pariatur, laboriosam tempora quia placeat repudiandae voluptas vitae voluptates, dolorem necessitatibus!</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur ullam dicta officia nihil qui explicabo error magnam itaque sit pariatur, laboriosam tempora quia placeat repudiandae voluptas vitae voluptates, dolorem necessitatibus!</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur ullam dicta officia nihil qui explicabo error magnam itaque sit pariatur, laboriosam tempora quia placeat repudiandae voluptas vitae voluptates, dolorem necessitatibus!</p>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur ullam dicta officia nihil qui explicabo
+        error magnam itaque sit pariatur, laboriosam tempora quia placeat repudiandae voluptas vitae voluptates, dolorem
+        necessitatibus!</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur ullam dicta officia nihil qui explicabo
+        error magnam itaque sit pariatur, laboriosam tempora quia placeat repudiandae voluptas vitae voluptates, dolorem
+        necessitatibus!</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur ullam dicta officia nihil qui explicabo
+        error magnam itaque sit pariatur, laboriosam tempora quia placeat repudiandae voluptas vitae voluptates, dolorem
+        necessitatibus!</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur ullam dicta officia nihil qui explicabo
+        error magnam itaque sit pariatur, laboriosam tempora quia placeat repudiandae voluptas vitae voluptates, dolorem
+        necessitatibus!</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur ullam dicta officia nihil qui explicabo
+        error magnam itaque sit pariatur, laboriosam tempora quia placeat repudiandae voluptas vitae voluptates, dolorem
+        necessitatibus!</p>
 </body>
+
 </html>
