--- a/task2/index.html
+++ b/task2/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex nam ad repudiandae. Aliquid est voluptatum doloremque magni sit consequatur possimus rem provident dolorum molestias? Fugiat vero itaque eos fugit eligendi?
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati mollitia blanditiis consequatur totam cum, voluptate ullam debitis quae laudantium minima, consequuntur nobis fuga dolor, pariatur omnis labore ipsa! Nam, officiis.</p>
-    <h1>Sudharsan</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima qui ab aut velit non numquam quos doloribus
+        tempora sit nam commodi, eos rerum deleniti? Reprehenderit similique rem in fuga consectetur!
+        Repellat voluptates a facilis itaque mollitia incidunt asperiores, dolorum dolore. Deserunt sapiente facere
+        natus ad tempore. Laborum consectetur facere repellat voluptas eos, rem earum est iste quo soluta sunt
+        obcaecati.
+        Corporis expedita sint alias maiores quos tenetur saepe odit, qui necessitatibus error quis blanditiis itaque
+        voluptatem minima. Accusamus, obcaecati placeat. Qui voluptates accusamus suscipit ab asperiores aspernatur,
+        vero delectus dicta!
+        Aperiam facere et facilis quae sit aliquid adipisci neque ratione maiores! Maiores ducimus ipsam animi
+        perspiciatis nesciunt accusantium, id magnam eaque architecto commodi quam amet doloremque nostrum incidunt
+        impedit? Nam!</p>
 </body>
+
 </html>
