--- a/task2/index.html
+++ b/task2/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio possimus dignissimos perferendis perspiciatis odio autem excepturi fuga culpa sint? Consequuntur sequi fugiat similique? Minima blanditiis placeat dignissimos distinctio nobis ducimus.</p>
 </body>
 </html>
