--- a/task1/index.html
+++ b/task1/index.html
@@ -1,53 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task1</title>
+    <title>background img</title>
+
 </head>
+<body> 
+   <center> <h1>HTML EXERCISES</h1> </center>
+   <section style="background-color: rgb(121, 215, 121);">     
+    <center><h4>Task 1</h4></center>
+    <center><p>Create a web page using the basic tags.</p>  </center>  </section>
+    <center><h3>Welcome to T4TEQ</h3></center>
+     
+    <P><u> ABOUT US </u></P>
+    <p>
+       <strong> T4TEQ Software Solutions </strong>is a software development and training company that was founded in 2017 in Tiruchirappalli, Tamil Nadu, India. It began as a small training company, but it was incorporated in 2019 under the Ministry of Corporate Affairs, Govt. of India as a corporate training and development company. It is internationally accredited as an ISO 9001:2015 certified training company by System and Product Certification, UK.
+    </p>
+    <pre>
+    <strong>T4TEQ Software Solutions</strong> was honoured for its outstanding achievements in training and education by TPL Techno Awards, a prominent organization that recognizes excellence in the field of technology. 
+   The award was presented to T4TEQ Software Solutions as a “Best Training Company” at a ceremony held in Dwarka, New Delhi. 
+      This award is a testament to T4TEQ Software Solutions' dedication to   providing high-quality training and education to its students and clients.
+    </pre>
+    <p>
+        <strong>T4TEQ Software Solutions</strong> was founded with the mission of training, developing, and providing career guidance to students. It aims to produce skilled and well-rounded employees for the IT and ITES industries. T4TEQ offers end-to-end training programs in programming, soft skills, and interview training, as well as collaborative software projects and real-time scenarios for corporates and educational institutions.
+    </p>
+    <p style="padding-left: 13em;"> <b> Vision: </b><sub>complete package for IT.</sub></p>
+    <p style="padding-left: 13em;"> <b> Mission:</b> <sub>Serve knowladge for developers..</sub></p>
+    <p>
 
-<body>
-    <center>
-        <h1>Welcome to T4TEQ</h1>
-    </center>
-    <h2><u>ABOUT US</u></h2>
-    <p>
-        <b>T4TEQ Software Solutions</b> is a software development and training company located in Trichirapalli, Tamil
-        Nadu, India. It was started in the year of 2017 and incorporated under the Ministry of Corporate Affairs, Govt.
-        of India as a corporate training and development company in 2019. It is internationally accredited as an ISO
-        9001:2015 certified training company by Sustem and Product Certification, UK.
-    </p>
-    <p>
-        <b> T4TEQ Software Solutions</b> was started with the aim to train, develop and to give career guidance to
-        students. It raises prominent, well-resourced employes to IT and ITES Industries. It offers end to end training
-        programes in programming, softskills and interview training along with various collabrative software projects
-        and real time scenarios for corporates and educational institutions.
-    </p>
-    <p>
-        T4TEQ Software Solutions was provides unique and friendly training with the latest technology required in IT
-        Industries and 24/7 support, so that students can get knowledge and support anytime. It has experienced Subject
-        Matter Experts (SME) in each domain and placed many students from varios college. It conducts many value added
-        course,wokshops and guest lectures in all the trending and topics sporadically.
-    </p>
-    <p style="padding-left: 400px;">
-        <b>Vision:</b>
-    </p>
-    <p style="padding-left: 500px;">
-        <em>complete package for IT,</em>
-    </p>
-    <p style="padding-left: 400px;">
-        <b>Mission</b>
-    </p>
-    <p style="padding-left: 500px;">
-        <em>Serve knowledge for developers....</em>
-    </p>
-    <p>
-        <u>Sample:</u><br>Chemical Formula:
-        <br>H<sub>2</sub>+O<sub>3</sub>=H<sub>2</sub>O<sub>3</sub><br>(a+b)<sup>2</sup>=a <sup>2</sup>+2ab+b
-        <sup>2</sup><br>Combination==>nC<sub>r</sub>=n!(n-r)!/r! <br><br> <strike><b>Don't use Mobile phone</b></strike>
-    </p> 
+<p>
+ <u> Sample:</u> <br>
+    Chemical Formula: <br>
+    H <sub>2</sub>+ O <sub>3</sub>= 
+       H <sub>2</sub> O <sub>3</sub> <br>
+       Mathematical Formulae: <br>
+       (a+b) <sup>2</sup>= a <sup>2</sup>+2ab+b <sup>2</sup> <br>
+       Combination ==> nC <sub>r</sub>=n!(n-r)!/r! <br>
+       <br>
+       <del> <b> Don't Use Mobile Phone</b></del>
     
+</p>
 </body>
-
 </html>
