--- a/task2/index.html
+++ b/task2/index.html
@@ -3,10 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Task2</title>
 </head>
 <body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio possimus dignissimos perferendis perspiciatis odio autem excepturi fuga culpa sint? Consequuntur sequi fugiat similique? Minima blanditiis 
-    placeat dignissimos distinctio nobis ducimus.</p>
+<!--    <center style="padding: 10rem;">
+        <table>
+    <a href="images.jpg" style="text-decoration: none; font-size: 4rem; padding: 1rem;">1</a>
+    <a href="cs2.jpg" style="text-decoration: none; font-size: 4rem; padding: 1rem;">2</a>
+    <a href="cs6.jpg" style="text-decoration: none; font-size: 4rem; padding: 1rem;">3</a>
+    <br>
+    <a href="images.jpg" style="text-decoration: none; font-size: 4rem; padding: 1rem;">4</a>
+    <a href="cs6.jpg" style="text-decoration: none; font-size: 4rem; padding: 1rem;">5</a>
+    <a href="cs2.jpg" style="text-decoration: none; font-size: 4rem; padding: 1rem;">6</a>
+    <br>
+    <a href="cs6.jpg" style="text-decoration: none; font-size: 4rem; padding: 1rem;">7</a>
+    <a href="cs2.jpg" style="text-decoration: none; font-size: 4rem; padding: 1rem;">8</a>
+    <a href="images.jpg" style="text-decoration: none; font-size: 4rem; padding: 1rem;">9</a>
+</center>-->
+
+<center>
+    <h1 style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;"> <span style="color: rgb(67, 67, 228);">Click Here</span> To Visit The Image</h1>
+<table  >
+    <tr >
+        <td style="border: 2px solid black;"><a href="images.jpg" style="text-decoration: none;"><img src="cs2.jpg" alt="img" style="border-radius: 50%; border-style:outset; border-color: aqua;" ></a></td>
+        <td style="border: 2px solid black;"><a href="cs2.jpg" style="text-decoration: none;"><img src="cs6.jpg" alt="img2" style="border-radius: 50%; border-style:outset;"></a></td>
+        <td style="border: 2px solid black;"><a href="cs6.jpg" style="text-decoration: none;"><img src="cs6.jpg" alt="img3" style="border-radius: 50%; border-style:outset;"></a></td>
+    </tr>
+    <tr style="border: 2px solid black;">
+        <td style="border: 2px solid black;" ><a href="cs6.jpg" style="text-decoration: none;"><img src="cs6.jpg" alt="img4" style="border-radius: 50%; border-style:outset;"></a></td>
+        <td style="border: 2px solid black;"><a href="cs2.jpg" style="text-decoration: none;"><img src="cs2.jpg" alt="img5" style="border-radius: 50%; border-style:outset;"></a></td>
+        <td style="border: 2px solid black;"><a href="images.jpg" style="text-decoration: none;"><img src="images.jpg" alt="img6" style="border-radius: 50%; border-style:outset; width: 98%;"></a></td>
+    </tr>
+    <tr style="border: 2px solid black;">
+        <td style="border: 2px solid black;"><a href="cs2.jpg" style="text-decoration: none;"><img src="images.jpg" alt="img7" style="border-radius: 50%; border-style:outset; width: 98%;"></a></td>
+        <td style="border: 2px solid black;"><a href="cs6.jpg" style="text-decoration: none;"><img src="cs6.jpg" alt="img8" style="border-radius: 50%; border-style:outset;"></a></td>
+        <td style="border: 2px solid black;"><a href="images.jpg" style="text-decoration: none;"><img src="cs6.jpg" alt="img9" style="border-radius: 50%; border-style:outset;"></a></td>
+    </tr>
+</table>
+</center>
+<h1 style="position: sticky;">T</h1>
 </body>
 </html>
