--- a/task5/index.html
+++ b/task5/index.html
@@ -20,9 +20,9 @@
 
     </section>
     <section class="head4">
-        <audio controls>
+       <center><audio controls>
             <source src="">
-        </audio>
+        </audio></center> 
     </section>
 </body>
 </html>
