--- a/task7/index.html
+++ b/task7/index.html
@@ -1,23 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task7</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <h1>Photo Collage</h1>
     <section class="main">
-    <section class="head1">
-        <div class="img1"><img src="/image/img1.jpg" alt="good night" width="150px"> <a href="">Goodnight</a></div>
-        <div class="img2"><img src="/image/img1.jpg" alt="good night" width="150px"><a href="">Goodnight</a></div>
-        <div class="img3"><img src="/image/img1.jpg" alt="good night" width="150px"><a href="">Goodnight</a></div>
+        <section class="head1">
+            <div class="img1" style="background-color: red;"><img src="/image/img1.jpg" alt="good night" width="150px">
+                <a href="">Goodnight</a>
+            </div>
+            <div class="img2" style="background-color: rgb(55, 207, 55);"><img src="/image/img1.jpg" alt="good night"
+                    width="150px"><a href="">Goodnight</a></div>
+            <div class="img3" style="background-color: blue;"><img src="/image/img1.jpg" alt="good night"
+                    width="150px"><a href="">Goodnight</a></div>
+        </section>
+        <section class="head2">
+            <div class="img4" style="background-color: yellow;"><img src="/image/img1.jpg" alt="good night"
+                    width="150px"><a href="">Goodnight</a></div>
+            <div class="img5" style="background-color: rgb(148, 28, 148);"><img src="/image/img1.jpg" alt="good night"
+                    width="150px"><a href="">Goodnight</a></div>
+            <div class="img6" style="background-color: pink;"><img src="/image/img1.jpg" alt="good night"
+                    width="150px"><a href="">Goodnight</a></div>
+        </section>
     </section>
-    <section class="head2">
-        <div class="img4"><img src="/image/img1.jpg" alt="good night" width="150px"><a href="">Goodnight</a></div>
-        <div class="img5"><img src="/image/img1.jpg" alt="good night" width="150px"><a href="">Goodnight</a></div>
-        <div class="img6"><img src="/image/img1.jpg" alt="good night" width="150px"><a href="">Goodnight</a></div>
-    </section>
-</section>
 </body>
+
 </html>
