--- a/task7/index.html
+++ b/task7/index.html
@@ -4,31 +4,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task7</title>
+    <title>Flex</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>Photo Collage</h1>
-    <section class="main">
-        <section class="head1">
-            <div class="img1" style="background-color: red;"><img src="/image/img1.jpg" alt="good night" width="150px">
-                <a href="">Goodnight</a>
+    <div class="main">
+        <h1 class="titlebar">Image Gallery</h1>
+        <div class="container">
+            <div class="box">
+                <img src="https://source.unsplash.com/random/200x200/?plant?1" alt="plant">
+                <h1>Lorem ipsum dolor sit amet.</h1>
+                <button>download</button>
             </div>
-            <div class="img2" style="background-color: rgb(55, 207, 55);"><img src="/image/img1.jpg" alt="good night"
-                    width="150px"><a href="">Goodnight</a></div>
-            <div class="img3" style="background-color: blue;"><img src="/image/img1.jpg" alt="good night"
-                    width="150px"><a href="">Goodnight</a></div>
-        </section>
-        <section class="head2">
-            <div class="img4" style="background-color: yellow;"><img src="/image/img1.jpg" alt="good night"
-                    width="150px"><a href="">Goodnight</a></div>
-            <div class="img5" style="background-color: rgb(148, 28, 148);"><img src="/image/img1.jpg" alt="good night"
-                    width="150px"><a href="">Goodnight</a></div>
-            <div class="img6" style="background-color: pink;"><img src="/image/img1.jpg" alt="good night"
-                    width="150px"><a href="">Goodnight</a></div>
-        </section>
-    </section>
+            <div class="box">
+                <img src="https://source.unsplash.com/random/200x200/?plant?2" alt="plant">
+                <h1>Lorem ipsum dolor sit amet.</h1>
+                <button>download</button>
+            </div>
+            <div class="box">
+                <img src="https://source.unsplash.com/random/200x200/?plant?3" alt="plant">
+                <h1>Lorem ipsum dolor sit amet.</h1>
+                <button>download</button>
+            </div>
+            <div class="box">
+                <img src="https://source.unsplash.com/random/200x200/?plant?4" alt="plant">
+                <h1>Lorem ipsum dolor sit amet.</h1>
+                <button>download</button>
+            </div>
+            <div class="box">
+                <img src="https://source.unsplash.com/random/200x200/?plant?5" alt="plant">
+                <h1>Lorem ipsum dolor sit amet.</h1>
+                <button>download</button>
+            </div>
+            <div class="box">
+                <img src="https://source.unsplash.com/random/200x200/?plant?6" alt="plant">
+                <h1>Lorem ipsum dolor sit amet.</h1>
+                <button>download</button>
+            </div>
+            <div class="box">
+                <img src="https://source.unsplash.com/random/200x200/?plant?7" alt="plant">
+                <h1>Lorem ipsum dolor sit amet.</h1>
+                <button>download</button>
+            </div>
+            <div class="box">
+                <img src="https://source.unsplash.com/random/200x200/?plant?8" alt="plant">
+                <h1>Lorem ipsum dolor sit amet.</h1>
+                <button>download</button>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
