--- a/task10/index.html
+++ b/task10/index.html
@@ -47,7 +47,7 @@
         </div>
         <div class="title-img">
             <div class="img-1">
-                <img src="image/img1.jpg" alt="interior design" width="100%" height="400px">
+                <img src="img1.jpg" alt="interior design" width="100%" height="400px">
             </div>
         </div>
         <div class="title-img-2">
@@ -65,11 +65,11 @@
             </div>
             <div class="content-img">
                 <div class="content-img-1">
-                    <img src="image/img2.jpeg" alt="interior image" width="260px" height="400px">
+                    <img src="img2.jpeg" alt="interior image" width="260px" height="400px">
                 </div>
 
                 <div class="content-img-2">
-                    <img src="/image/img3.jpg" alt="interior image" width="260px" height="400px">
+                    <img src="img3.jpg" alt="interior image" width="260px" height="400px">
                 </div>
 
             </div>
@@ -78,7 +78,7 @@
         <div class="bg2">
 
             <div class="bgimg2">
-                <img src="/image/img4.jpg" alt="Designer image" width="650px" height="400px">
+                <img src="img4.jpg" alt="Designer image" width="650px" height="400px">
             </div>
             <div class="bg-img2-content">
                 <h2>About us</h2>
@@ -111,32 +111,32 @@
                 </div>
                 <div class="recent-pp-img">
                     <div class="re-img-1">
-                        <img src="/image/hormonyhouse.jpg" alt="harmony house" width="200px" height="200px">
+                        <img src="hormonyhouse.jpg" alt="harmony house" width="200px" height="200px">
                         <p class="p1">Harmony Hourse</p>
                         <p>House</p>
                     </div>
                     <div class="re-img-1">
-                        <img src="/image/coffee.jpg" alt="Coffee corner" width="200px" height="200px">
+                        <img src="coffee.jpg" alt="Coffee corner" width="200px" height="200px">
                         <p class="p1">The Coffee Corner</p>
                         <p>Foods & Beverage</p>
                     </div>
                     <div class="re-img-1">
-                        <img src="/image/hotelparadies.jpeg" alt="hotel" width="200px" height="200px">
+                        <img src="hotelparadies.jpeg" alt="hotel" width="200px" height="200px">
                         <p class="p1">Paradis Hotel</p>
                         <p>Hotels</p>
                     </div>
                     <div class="re-img-1">
-                        <img src="/image/office.jpg" alt="offices" width="200px" height="200px">
+                        <img src="office.jpg" alt="offices" width="200px" height="200px">
                         <p class="p1">NeuWave Offices</p>
                         <p>Offices</p>
                     </div>
                     <div class="re-img-1">
-                        <img src="/image/hotel.jpg" alt="hotels" width="200px" height="200px">
+                        <img src="hotel.jpg" alt="hotels" width="200px" height="200px">
                         <p class="p1">Tranquil Tides Hotel and 5pa</p>
                         <p>Hotels</p>
                     </div>
                     <div class="re-img-1">
-                        <img src="/image/cottage.jpg" alt="house" width="200px" height="200px">
+                        <img src="cottage.jpg" alt="house" width="200px" height="200px">
                         <p class="p1">Charming Cottage </p>
                         <p>House</p>
                     </div>
