--- a/task20/index.html
+++ b/task20/index.html
@@ -57,17 +57,17 @@
                     </div>
 
                     <div class="img-content">
-                        <h4>Hotel Kannappa</h4>
+                        <h4>A2B - Adyar Ananda Bhavan</h4>
                         <p class="p-bg">3.5 <i class="fa-regular fa-star"></i> </p>
                     </div>
 
 
                     <div class="img-content-2">
-                        <p class="cont-2-p">Chettinad, Chinese, South indian biriyani</p>
-                        <p><i class="fa-solid fa-indian-rupee-sign"></i>200 for one</p>
+                        <p class="cont-2-p">South Indian, Fast Food, South</p>
+                        <p><i class="fa-solid fa-indian-rupee-sign"></i>250 for one</p>
                     </div>
                     <div class="time">
-                        <p>28 min</p>
+                        <p>30 min</p>
                     </div>
                     <div class="br"></div>
                     <div class="img-footer">
@@ -91,17 +91,17 @@
                     </div>
 
                     <div class="img-content">
-                        <h4>Hotel Kannappa</h4>
+                        <h4>Raagam Garden Restarurant</h4>
                         <p class="p-bg">3.9 <i class="fa-regular fa-star"></i> </p>
                     </div>
 
 
                     <div class="img-content-2">
                         <p class="cont-2-p">Chettinad, Chinese, South indian biriyani</p>
-                        <p><i class="fa-solid fa-indian-rupee-sign"></i>200 for one</p>
+                        <p><i class="fa-solid fa-indian-rupee-sign"></i>160 for one</p>
                     </div>
                     <div class="time">
-                        <p>28 min</p>
+                        <p>27 min</p>
                     </div>
                     <!-- <div class="br"></div>
                     <div class="img-footer">
@@ -122,17 +122,17 @@
                     </div>
 
                     <div class="img-content">
-                        <h4>Hotel Kannappa</h4>
+                        <h4>SK's Bakery</h4>
                         <p class="p-bg">3.5 <i class="fa-regular fa-star"></i> </p>
                     </div>
 
 
                     <div class="img-content-2">
-                        <p class="cont-2-p">Chettinad, Chinese, South indian biriyani</p>
-                        <p><i class="fa-solid fa-indian-rupee-sign"></i>200 for one</p>
+                        <p class="cont-2-p">Bakery, Desserts, Fast Food</p>
+                        <p><i class="fa-solid fa-indian-rupee-sign"></i>150 for one</p>
                     </div>
                     <div class="time">
-                        <p>28 min</p>
+                        <p>19 min</p>
                     </div>
                     <div class="br"></div>
                     <div class="img-footer">
@@ -153,17 +153,17 @@
                     </div>
 
                     <div class="img-content">
-                        <h4>Hotel Kannappa</h4>
+                        <h4>Aswins Sweets & Snacks</h4>
                         <p class="p-bg">4.5 <i class="fa-regular fa-star"></i> </p>
                     </div>
 
 
                     <div class="img-content-2">
-                        <p class="cont-2-p">Chettinad, Chinese, South indian biriyani</p>
-                        <p><i class="fa-solid fa-indian-rupee-sign"></i>200 for one</p>
+                        <p class="cont-2-p">Mithai, Bakery, Street Food</p>
+                        <p><i class="fa-solid fa-indian-rupee-sign"></i>120 for one</p>
                     </div>
                     <div class="time">
-                        <p>28 min</p>
+                        <p>36 min</p>
                     </div>
                     <div class="br"></div>
                     <div class="img-footer">
@@ -185,17 +185,17 @@
                     </div>
 
                     <div class="img-content">
-                        <h4>Hotel Kannappa</h4>
+                        <h4>Subway</h4>
                         <p class="p-bg">3.9 <i class="fa-regular fa-star"></i> </p>
                     </div>
 
 
                     <div class="img-content-2">
-                        <p class="cont-2-p">Chettinad, Chinese, South indian biriyani</p>
-                        <p><i class="fa-solid fa-indian-rupee-sign"></i>200 for one</p>
+                        <p class="cont-2-p">Healthy Food, Sandwich, pizza</p>
+                        <p><i class="fa-solid fa-indian-rupee-sign"></i>80 for one</p>
                     </div>
                     <div class="time">
-                        <p>28 min</p>
+                        <p>18 min</p>
                     </div>
                     <!-- <div class="br"></div>
                     <div class="img-footer">
@@ -216,17 +216,17 @@
                     </div>
 
                     <div class="img-content">
-                        <h4>Hotel Kannappa</h4>
+                        <h4>Hotel Vijayarani</h4>
                         <p class="p-bg">4.1 <i class="fa-regular fa-star"></i> </p>
                     </div>
 
 
                     <div class="img-content-2">
-                        <p class="cont-2-p">Chettinad, Chinese, South indian biriyani</p>
-                        <p><i class="fa-solid fa-indian-rupee-sign"></i>200 for one</p>
+                        <p class="cont-2-p">Chettinad, Chinese, North indian biriyani</p>
+                        <p><i class="fa-solid fa-indian-rupee-sign"></i>250 for one</p>
                     </div>
                     <div class="time">
-                        <p>28 min</p>
+                        <p>45 min</p>
                     </div>
                     <div class="br"></div>
                     <div class="img-footer">
@@ -247,17 +247,17 @@
                     </div>
 
                     <div class="img-content">
-                        <h4>Hotel Kannappa</h4>
+                        <h4>SRV Mess</h4>
                         <p class="p-bg">3.3 <i class="fa-regular fa-star"></i> </p>
                     </div>
 
 
                     <div class="img-content-2">
-                        <p class="cont-2-p">Chettinad, Chinese, South indian biriyani</p>
-                        <p><i class="fa-solid fa-indian-rupee-sign"></i>200 for one</p>
+                        <p class="cont-2-p">Biryani, North Indian, Chinese</p>
+                        <p><i class="fa-solid fa-indian-rupee-sign"></i>100 for one</p>
                     </div>
                     <div class="time">
-                        <p>28 min</p>
+                        <p>32 min</p>
                     </div>
                     <div class="br"></div>
                     <div class="img-footer">
@@ -279,14 +279,14 @@
                     </div>
 
                     <div class="img-content">
-                        <h4>Hotel Kannappa</h4>
+                        <h4>Kongu Parotta Stall </h4>
                         <p class="p-bg">4.5 <i class="fa-regular fa-star"></i> </p>
                     </div>
 
 
                     <div class="img-content-2">
-                        <p class="cont-2-p">Chettinad, Chinese, South indian biriyani</p>
-                        <p><i class="fa-solid fa-indian-rupee-sign"></i>200 for one</p>
+                        <p class="cont-2-p">South Indian, Chinese</p>
+                        <p><i class="fa-solid fa-indian-rupee-sign"></i>80 for one</p>
                     </div>
                     <div class="time">
                         <p>28 min</p>
