--- a/task20/index.html
+++ b/task20/index.html
@@ -148,7 +148,7 @@
             <div class="card1">
                 <div class="card-box">
                     <div class="img-offer">
-                        <img src="asset/img4.jpg" alt="Biriyani" width="300px" height="250px">
+                        <img src="asset/img4.jpg" alt="Biriyani" width="300px" height="250px" id="closed">
                         <P class="img-offer-ct"> 35% OFF </P>
                     </div>
 
@@ -162,8 +162,10 @@
                         <p class="cont-2-p">Mithai, Bakery, Street Food</p>
                         <p><i class="fa-solid fa-indian-rupee-sign"></i>120 for one</p>
                     </div>
+                    <p class="open-time">Opens at 10am</p>
                     <div class="time">
-                        <p>36 min</p>
+                        
+                        <!-- <p>36 min</p> -->
                     </div>
                     <div class="br"></div>
                     <div class="img-footer">
