--- a/task15/index.html
+++ b/task15/index.html
@@ -51,7 +51,7 @@
         <!-- main-banner -->
         <div class="main-banner">
             <div class="banner-box-1">
-                <img src="images/banner2.jpg" alt="" width="100%" class="">
+                <img src="images/banner2.jpg" alt="" width="100%" class="" style="height: fit-content;">
                 <div class="banner-box">
                     <div class="banner-content">
                         <h1>OUR</h1>
@@ -71,7 +71,73 @@
 
                 </div>
             </div>
+
+            <!-- sidenav -->
+
+            <!-- <div class="banner-box-1">
+                <img src="images/banner2.jpg" alt="" width="100%" class="">
+                <div class="banner-box">
+                    <div class="banner-content">
+                        <h1>OUR</h1>
+                        <h2>LATEST <br>
+                            <span>PRODUCT</span>
+                        </h2>
+                        <P>it is a long established fact that a r <br>eader will be distracted by the readable content
+                            of a
+                            page
+                        </P>
+                        <div class="main-btn">
+                            <p>see more Products</p>
+                        </div>
+
+
+                    </div>
+
+                </div>
+            </div> -->
+            
         </div>
+
+        <div class="main2">
+            <div class="main2-content">
+
+                <h1>
+                   <span style="color: rgb(253, 189, 14);" >Why</span>  Choose Us
+                <div class="lh1"></div> </h1>
+
+                    <p>Fastest Repair Service With best Price</p>
+            </div>
+        </div>
+
+        <!-- main3 -->
+
+        <div class="main3-container">
+            <div class="main3-box-container">
+            <div class="main3-box">
+                <img src="icon/1.png" alt="">
+                <h2>Data recovery</h2>
+                <p>Perspiciatis eos quos totam cum minima autPerspiciatis eos quos</p>
+            </div>
+            <div class="main3-box">
+                <img src="icon/1.png" alt="">
+                <h2>Data recovery</h2>
+                <p>Perspiciatis eos quos totam cum minima autPerspiciatis eos quos</p>
+            </div>
+            <div class="main3-box">
+                <img src="icon/1.png" alt="">
+                <h2>Data recovery</h2>
+                <p>Perspiciatis eos quos totam cum minima autPerspiciatis eos quos</p>
+            </div>
+            <div class="main3-box">
+                <img src="icon/1.png" alt="">
+                <h2>Data recovery</h2>
+                <p>Perspiciatis eos quos totam cum minima autPerspiciatis eos quos</p>
+            </div>
+            </div>
+
+        </div>
+
+
 
 
 
