--- a/task15/index.html
+++ b/task15/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Task 15</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
@@ -32,11 +32,11 @@
         <div class="nav-box">
             <div class="nav-img">
                 <img src="images/logo.jpg" alt="">
-                <p><a href="" class="pr">HOME</a></p>
-                <p><a href="">ABOUT</a></p>
-                <p><a href="">PRODUCT</a></p>
-                <p><a href="">BLOG</a></p>
-                <p><a href="">CONTACT</a></p>
+                <p><a href="#" class="#">HOME</a></p>
+                <p><a href="about.html">ABOUT</a></p>
+                <p><a href="product.html">PRODUCT</a></p>
+                <p><a href="#">BLOG</a></p>
+                <p><a href="#contact">CONTACT</a></p>
                 <p><button>LOGIN</button></p>
             </div>
         </div>
@@ -71,7 +71,28 @@
 
                 </div>
             </div>
+            <!-- slide -->
+            <div class="banner-box-1">
+                <img src="images/banner2.jpg" alt="" width="100%" class="" style="height: fit-content;">
+                <div class="banner-box">
+                    <div class="banner-content">
+                        <h1>OUR</h1>
+                        <h2>LATEST <br>
+                            <span>PRODUCT</span>
+                        </h2>
+                        <P>it is a long established fact that a r <br>eader will be distracted by the readable content
+                            of a
+                            page
+                        </P>
+                        <div class="main-btn">
+                            <p>see more Products</p>
+                        </div>
 
+
+                    </div>
+
+                </div>
+            </div>
             <!-- sidenav -->
 
             <!-- <div class="banner-box-1">
@@ -95,47 +116,317 @@
 
                 </div>
             </div> -->
-            
+
         </div>
+
 
         <div class="main2">
             <div class="main2-content">
 
                 <h1>
-                   <span style="color: rgb(253, 189, 14);" >Why</span>  Choose Us
-                <div class="lh1"></div> </h1>
+                    <span style="color: rgb(253, 189, 14);">Why</span> Choose Us
+                    <div class="lh1"></div>
+                </h1>
 
-                    <p>Fastest Repair Service With best Price</p>
+                <p>Fastest Repair Service With best Price</p>
             </div>
         </div>
 
-        <!-- main3 -->
+        <!-- main3 Why choose us  -->
 
         <div class="main3-container">
-            <div class="main3-box-container">
-            <div class="main3-box">
-                <img src="icon/1.png" alt="">
-                <h2>Data recovery</h2>
-                <p>Perspiciatis eos quos totam cum minima autPerspiciatis eos quos</p>
-            </div>
-            <div class="main3-box">
-                <img src="icon/1.png" alt="">
-                <h2>Data recovery</h2>
-                <p>Perspiciatis eos quos totam cum minima autPerspiciatis eos quos</p>
-            </div>
-            <div class="main3-box">
-                <img src="icon/1.png" alt="">
-                <h2>Data recovery</h2>
-                <p>Perspiciatis eos quos totam cum minima autPerspiciatis eos quos</p>
-            </div>
-            <div class="main3-box">
-                <img src="icon/1.png" alt="">
-                <h2>Data recovery</h2>
-                <p>Perspiciatis eos quos totam cum minima autPerspiciatis eos quos</p>
-            </div>
+            <div class="main3-bg">
+                <div class="main3-box-container">
+                    <div class="main3-box">
+                        <img src="icon/1.png" alt="">
+                        <h2>Data recovery</h2>
+                        <p>Perspiciatis eos quos totam cum minima autPerspiciatis eos quos</p>
+                    </div>
+                    <div class="main3-box">
+                        <img src="icon/2.png" alt="">
+                        <h2>Computer repair</h2>
+                        <p>Perspiciatis eos quos totam cum minima autPerspiciatis eos quos</p>
+                    </div>
+                    <div class="main3-box">
+                        <img src="icon/3.png" alt="">
+                        <h2>Mobile service</h2>
+                        <p>Perspiciatis eos quos totam cum minima autPerspiciatis eos quos</p>
+                    </div>
+                    <div class="main3-box">
+                        <img src="icon/4.png" alt="">
+                        <h2>Networking solution</h2>
+                        <p>Perspiciatis eos quos totam cum minima autPerspiciatis eos quos</p>
+                    </div>
+                </div>
+                <div class="main3-btn">
+                    <button>Read More</button>
+                </div>
             </div>
 
         </div>
+
+
+        <!-- main4 service section -->
+
+        <!-- heading -->
+        <div class="service-head">
+            <div class="service-head-content">
+
+                <h1>
+                    <span style="color: rgb(253, 189, 14);">SERVICE</span> PROCESS
+                    <div class="lh1"></div>
+                </h1>
+
+                <p>Easy and effective way to get your device repair</p>
+            </div>
+        </div>
+        <!-- heading end -->
+
+        <!-- service section gallery -->
+
+        <div class="service">
+            <div class="service-container">
+                <div class="service-card">
+                    <img src="icon/service1.png" alt="">
+                    <h1>Fast service</h1>
+                    <p>Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea</p>
+                </div>
+                <div class="service-card">
+                    <img src="icon/service2.png" alt="">
+                    <h1>Secure payments</h1>
+                    <p>Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea</p>
+                </div>
+                <div class="service-card">
+                    <img src="icon/service3.png" alt="">
+                    <h1>Expert team</h1>
+                    <p>Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea</p>
+                </div>
+                <div class="service-card">
+                    <img src="icon/service4.png" alt="">
+                    <h1>Affordabel service</h1>
+                    <p>Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea</p>
+                </div>
+                <div class="service-card">
+                    <img src="icon/service5.png" alt="">
+                    <h1>90 Days warranty</h1>
+                    <p>Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea</p>
+                </div>
+                <div class="service-card">
+                    <img src="icon/service6.png" alt="">
+                    <h1>Award winning</h1>
+                    <p>Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- product head -->
+        <div class="product-head">
+            <div class="product-head-content">
+
+                <h1>
+                    <span style="color: rgb(253, 189, 14);">OUR</span> PRODUCTS
+                    <div class="lh1"></div>
+                </h1>
+
+                <p>We package the products with best service to make make you a happy customer</p>
+            </div>
+        </div>
+
+        <!-- product gallery  -->
+
+        <div class="products">
+            <div class="products-container">
+                <div class="products-card">
+                    <img src="icon/p1.png" alt="">
+                    <h1>Norton internet Security</h1>
+                    <p>
+                        Rs.25000
+                    </p>
+                </div>
+                <div class="products-card">
+                    <img src="icon/p2.png" alt="">
+                    <h1>Norton internet Security</h1>
+                    <p>
+                        Rs.25000
+                    </p>
+                </div>
+                <div class="products-card">
+                    <img src="icon/p3.png" alt="">
+                    <h1>Norton internet Security</h1>
+                    <p>
+                        Rs.25000
+                    </p>
+                </div>
+                <div class="products-card">
+                    <img src="icon/p4.png" alt="">
+                    <h1>Norton internet Security</h1>
+                    <p>
+                        Rs.25000
+                    </p>
+                </div>
+                <div class="products-card">
+                    <img src="icon/p5.png" alt="">
+                    <h1>Norton internet Security</h1>
+                    <p>
+                        Rs.25000
+                    </p>
+                </div>
+                <div class="products-card">
+                    <img src="icon/p6.png" alt="">
+                    <h1>Norton internet Security</h1>
+                    <p>
+                        Rs.25000
+                    </p>
+                </div>
+                <div class="products-card">
+                    <img src="icon/p2.png" alt="">
+                    <h1>Norton internet Security</h1>
+                    <p>
+                        Rs.25000
+                    </p>
+                </div>
+                <div class="products-card">
+                    <img src="icon/p7.png" alt="">
+                    <h1>Norton internet Security</h1>
+                    <p>
+                        Rs.25000
+                    </p>
+                </div>
+            </div>
+
+
+            <!-- client section  -->
+            <div class="client">
+                <div class="client-container">
+                    <div class="client-head">
+                        <h1>What Clients Say?</h1>
+                    </div>
+                    <div class="client-db">
+                        <img src="images/lllll.png" alt="">
+                        <div class="db-img-content">
+                            <h3>Jone Due</h3>
+                            <p>12/02/2019</p>
+                        </div>
+                    </div>
+                    <div class="client-db-content">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis dolore ipsum aliquid
+                            dignissimos quibusdam, vel totam, voluptatibus placeat, nihil beatae deleniti sit provident
+                            quas
+                            quo ratione repellendus iste similique odit!. <br>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod fugit cumque exercitationem
+                            et.
+                            Excepturi, perspiciatis.</p>
+                    </div>
+                </div>
+
+                <!-- client slider  -->
+
+                <div class="client-container">
+                    <div class="client-head">
+                        <h1>What Clients Say?</h1>
+                    </div>
+                    <div class="client-db">
+                        <img src="images/lllll.png" alt="">
+                        <div class="db-img-content">
+                            <h3>Jone Due</h3>
+                            <p>12/02/2019</p>
+                        </div>
+                    </div>
+                    <div class="client-db-content">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis dolore ipsum aliquid
+                            dignissimos quibusdam, vel totam, voluptatibus placeat, nihil beatae deleniti sit provident
+                            quas
+                            quo ratione repellendus iste similique odit!. <br>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod fugit cumque exercitationem
+                            et.
+                            Excepturi, perspiciatis.</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- request a free quote  -->
+
+            <div class="request">
+                <div class="request-box">
+                    <div class="request-box-top">
+                        <h1>REQUEST A FREE QUOTE</h1>
+                        <img src="icon/calll.png" alt="">
+                    </div>
+
+                    <div class="request-box-bottom">
+                        <p>Get answers and advice from people you want it from.</p>
+                        <div class="bt-center">
+                            <button>Get Quote</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- map section  -->
+            <div class="map">
+                <div class="map-container">
+                    <img src="images/mapimg.jpg" alt="" width="100%">
+                </div>
+            </div>
+
+
+        </div>
+
+        <!-- footer section  -->
+        <div class="footer">
+            <div class="footer-container">
+                <div class="footer-media-i">
+                    <i class="fa-brands fa-facebook" aria-hidden="true"></i>
+                    <i class="fa-brands fa-twitter" aria-hidden="true"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                </div>
+                <div class="contact-container" id="contact">
+                    <div class="contact-us">
+                        <h1>CONTACT US</h1>
+                        <P>123 Second Street Fifth Avenue, <br>
+                            Manhattan, New Yourk
+                            <br>
+                            +918072146078
+                        </P>
+
+                    </div>
+                    <div class="contact-us">
+                        <h1>ADDITIONAL LINKS</h1>
+                        <P><a href="#">About Us</a></P>
+                        <P><a href="#">Terms and conditions</a></P>
+                        <P><a href="#">Privacy policy</a></P>
+                        <P><a href="#">News</a></P>
+                        <P><a href="#">Contact us</a></P>
+
+                    </div>
+                    <div class="contact-us">
+                        <h1>SERVICE</h1>
+                        <p><a href="#">Data recovery</a></p>
+                        <p><a href="#">Computer repair</a></p>
+                        <p><a href="#">Mobile service</a></p>
+                        <p><a href="#">Network solution</a></p>
+                        <p><a href="#">Technical support</a></p>
+
+
+                    </div>
+                    <div class="contact-us">
+                        <h1>ABOUT LIGHTEN</h1>
+                        <P>Tincidunt elit magnis nulla facilisis.
+                            Dolor Sapien nunc amet ultrices,
+                        </P>
+
+                    </div>
+                </div>
+            </div>
+            <!-- <div class="footer-bottom">
+                
+            </div> -->
+        </div>
+
+
+
+
+
 
 
 
@@ -146,9 +437,6 @@
 
 
     </div>
-
-
-
 </body>
 
 </html>
