--- a/task15/index.html
+++ b/task15/index.html
@@ -36,15 +36,30 @@
                 <p><a href="about.html">ABOUT</a></p>
                 <p><a href="product.html">PRODUCT</a></p>
                 <p><a href="#">BLOG</a></p>
-                <p><a href="#contact">CONTACT</a></p>
+                <p><a href="contact.html">CONTACT</a></p>
                 <p><button>LOGIN</button></p>
             </div>
         </div>
 
+
         <div class="nav-img-1">
             <img src="images/logo.jpg" alt="">
             <div class="nav2-bar">
-                <i class="fa-solid fa-bars"></i>
+
+                <i class="fa-solid fa-bars">
+                    <input type="checkbox" class="chick" name="male" id="op">
+                    <!-- <input type="checkbox" class="close" name="female" id="op"> -->
+                    <div class="side-nav-bar">
+                        <p><a href="#" class="#">HOME</a></p>
+                        <p><a href="about.html">ABOUT</a></p>
+                        <p><a href="product.html">PRODUCT</a></p>
+                        <p><a href="#">BLOG</a></p>
+                        <p><a href="contact.html">CONTACT</a></p>
+                        <p><button>LOGIN</button></p>
+                    </div>
+                </i>
+
+
             </div>
         </div>
 
