--- a/task15/about.html
+++ b/task15/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="about.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -34,35 +34,6 @@
             line-height: 29px;
         }
 
-        /*  */
-/* 
-        @media screen and (max-width: 768px) {
-            .intro-container {
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: start;
-                column-gap: 50px;
-                padding: 50px 18px;
-            }
-
-            .intro-container img {
-                width: 500px;
-                padding-bottom: 50px;
-            }
-
-            .intro-img-ct h1 {
-                font-size: 56px;
-            }
-
-            .intro-img-ct p {
-                padding-top: 20px;
-                font-size: 20px;
-                line-height: 29px;
-            }
-
-
-        } */
     </style>
 </head>
 
@@ -96,10 +67,31 @@
             </div>
         </div>
 
-        <div class="nav-img-1">
+        <!-- <div class="nav-img-1">
             <img src="images/logo.jpg" alt="">
             <div class="nav2-bar">
                 <i class="fa-solid fa-bars"></i>
+            </div>
+        </div> -->
+
+        <div class="nav-img-1">
+            <img src="images/logo.jpg" alt="">
+            <div class="nav2-bar">
+
+                <i class="fa-solid fa-bars">
+                    <input type="checkbox" class="chick" name="male" id="op">
+                    <!-- <input type="checkbox" class="close" name="female" id="op"> -->
+                    <div class="side-nav-bar">
+                        <p><a href="index.html" class="#">HOME</a></p>
+                        <p><a href="#">ABOUT</a></p>
+                        <p><a href="product.html">PRODUCT</a></p>
+                        <p><a href="#">BLOG</a></p>
+                        <p><a href="contact.html">CONTACT</a></p>
+                        <p><button>LOGIN</button></p>
+                    </div>
+                </i>
+
+
             </div>
         </div>
 
