--- a/bootstrap/form/index.html
+++ b/bootstrap/form/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="main">
         <div class="container d-flex justify-content-center vh-100 align-items-center">
-            <div class="main2">
+            <div class="main2 w-100">
 
                 <div class="card">
                     <div class="card-body">
@@ -47,7 +47,7 @@
                                 </div>
                             </div>
                             <div class="button text-center mt-3 d-flex justify-content-center gap-4 align-items-center">
-                                <button class="btn btn-outline-success ps-3 pe-3"> Login</button>
+                                <button class="btn btn-outline-success ps-3 pe-3" id="lgbt"> Login</button>
                                 <!-- <p>or</p> -->
                                 <a href="">Forget Password</a>
                             </div>
@@ -57,28 +57,28 @@
                         <form action="" method="get" class="mt-3" id="registeration">
                             <div class="input-group row">
                                 <div class="col-4 col-sm-3">
-                                    <label for="username">Username</label>
+                                    <label for="Username">Username</label>
                                 </div>
                                 <div class="col-8 col-sm-9">
-                                    <input type="text" name="username" id="username" class="form-control"
+                                    <input type="text" name="username" id="Username" class="form-control"
                                         placeholder="Username">
                                 </div>
                             </div>
                             <div class="input-group row mt-4">
                                 <div class="col-4 col-sm-3 text-sm-start">
-                                    <label for="username">E-mail</label>
+                                    <label for="E-mail">E-mail</label>
                                 </div>
                                 <div class="col-8 col-sm-9">
-                                    <input type="text" name="username" id="username" class="form-control"
-                                        placeholder="Password">
+                                    <input type="text" name="E-mail" id="E-mail" class="form-control"
+                                        placeholder="E-mail">
                                 </div>
                             </div>
                             <div class="input-group row mt-4">
                                 <div class="col-4 col-sm-3">
-                                    <label for="password" class="form-label">Password</label>
+                                    <label for="passwordN" class="form-label">Password</label>
                                 </div>
                                 <div class="col-8 col-sm-9">
-                                    <input type="password" name="password" id="password" class="form-control"
+                                    <input type="password" name="password" id="passwordN" class="form-control"
                                         placeholder="Password">
                                 </div>
                             </div>
@@ -87,12 +87,12 @@
                                     <label for="c-password" class="form-label">Password (again)</label>
                                 </div>
                                 <div class="col-8 col-sm-9">
-                                    <input type="password" name="password" id="password" class="form-control"
+                                    <input type="password" name="c-password" id="c-password" class="form-control"
                                         placeholder="Conform Password">
                                 </div>
                             </div>
                             <div class="button d-flex justify-content-center gap-3">
-                                <button class="btn btn-outline-success">Submit</button>
+                                <button class="btn btn-outline-success" id="Submit">Submit</button>
                                 <button class="btn btn-outline-danger">Reset</button>
                             </div>
                         </form>
